
enable_testing()
file(GLOB_RECURSE TEST_FAIL_SOURCES "fail/*.cpp")
file(GLOB_RECURSE TEST_PASS_SOURCES "pass/*.cpp")

foreach (TEST_SOURCE ${TEST_FAIL_SOURCES})
    get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME} UDP_LowBandwidth)
    target_include_directories(${TEST_NAME} PRIVATE ../include)
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
    set_tests_properties(${TEST_NAME} PROPERTIES WILL_FAIL TRUE)
endforeach ()

foreach (TEST_SOURCE ${TEST_PASS_SOURCES})
    get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME} UDP_LowBandwidth)
    target_include_directories(${TEST_NAME} PRIVATE ../include)
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endforeach ()